--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
     <id>savagelabs</id>
     <url>https://nexus.savagelabs.net/repository/maven-releases/</url>
 </repository>
+ <repository>
+    <id>codemc-repo</id>
+    <url>https://repo.codemc.io/repository/maven-public/</url>
+</repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -47,6 +51,12 @@
     <groupId>com.iridium</groupId>
     <artifactId>IridiumSkyblock</artifactId>
     <version>LATEST</version>
+</dependency>
+<dependency>
+    <groupId>com.gmail.filoghost.holographicdisplays</groupId>
+    <artifactId>holographicdisplays-api</artifactId>
+    <version>2.4.9</version>
+    <scope>provided</scope>
 </dependency>
     </dependencies>
   <build>
