--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>SkyblockCore</groupId>
   <artifactId>SkyblockCore</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <name>SkyblockCore CriptMania</name>
+  <name>SkyblockCore Premsi</name>
   <description>CriptMania all right reserved</description>
   <repositories>
         <repository>
