Ajout de l'api core au plugin

--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -17,5 +18,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/farme/Desktop/serveurs/serveur skyblock criptmania/plugins/TNE-0.1.1.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/farme/IdeaProjects/Core/target/Core-1.0.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
