Changement de nom + fix bug config

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>SkyblockCore</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <name>SkyblockCore VeryMc</name>
-  <description>VeryMc all right reserved</description>
+  <description>Farmeurimmo has all right reserved</description>
   <repositories>
         <repository>
             <id>net.luckperms</id>
