--- a/config.yml
+++ b/config.yml
@@ -2,11 +2,11 @@ bossbar:
   #Nombre de bossbar, si vous ne modifer pas ce chiffre alors que vous avez ajouté/enlevé un display, DE GROS BUGS PEUVENT SURVENIR, je n'en serais pas responsable
   number: 5
   display:
-    1: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fBon jeu sur PremsiServ !"
-    2: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fUn probl\u00e8me ? Contacte un STAFF"
-    3: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fwww.premsiserv.com"
-    4: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fhttps://discord.gg/DJgzEAdG28"
-    5: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fVous \u00eates sur \u00A7eplay.premsiserv.com"
+    1: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fBon jeu sur nos serveurs !"
+    2: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fUn probl\u00e8me ? Contactez un STAFF"
+    3: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fwww.verymc.fr"
+    4: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fhttps://discord.gg/7V562qf27r"
+    5: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fVous \u00eates sur \u00A7eplay.verymc.fr"
   #20 = 1 seconde
   #80 = 4 secondes
   delay: 380
