--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: SkyblockCore
 version: 1.0
 author: Farmeurimmo
-main: fr.farmeurimmo.premsi.core.Main
+main: fr.farmeurimmo.verymc.core.Main
 depend: [Citizens, TheNewEconomy, IridiumSkyblock, HolographicDisplays, Core]
 api-version: 1.16
 commands:
