--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: SkyblockCore
 version: 1.0
 author: Farmeurimmo
 main: fr.farmeurimmo.verymc.core.Main
-depend: [Citizens, TheNewEconomy, IridiumSkyblock, HolographicDisplays, Core]
+depend: [Citizens, IridiumSkyblock, HolographicDisplays, Core, Vault]
 api-version: 1.16
 commands:
   spawn:
@@ -41,4 +41,6 @@ commands:
     aliases: [atouts]
   datafile:
   key:
+  chatreactionsuggest:
+  money:
   
