--- a/config.yml
+++ b/config.yml
@@ -172,3 +172,93 @@ Shops:
       material: TNT
       buy: 40
       sell: 8
+  Dyes:
+
+    1:
+      material: BLACK_DYE
+      buy: 20
+      sell: -1
+    2:
+      material: BLUE_DYE
+      buy: 20
+      sell: -1
+    3:
+      material: BROWN_DYE
+      buy: 20
+      sell: -1
+    4:
+      material: CYAN_DYE
+      buy: 20
+      sell: -1
+    5:
+      material: GRAY_DYE
+      buy: 20
+      sell: -1
+    6:
+      material: GREEN_DYE
+      buy: 20
+      sell: -1
+    7:
+      material: LIGHT_BLUE_DYE
+      buy: 20
+      sell: -1
+    8:
+      material: LIGHT_GRAY_DYE
+      buy: 20
+      sell: -1
+    9:
+      material: LIME_DYE
+      buy: 20
+      sell: -1
+    10:
+      material: MAGENTA_DYE
+      buy: 20
+      sell: -1
+    11:
+      material: ORANGE_DYE
+      buy: 20
+      sell: -1
+    12:
+      material: PINK_DYE
+      buy: 20
+      sell: -1
+    13:
+      material: PURPLE_DYE
+      buy: 20
+      sell: -1
+    14:
+      material: RED_DYE
+      buy: 20
+      sell: -1
+    15:
+      material: WHITE_DYE
+      buy: 20
+      sell: -1
+    16:
+      material: YELLOW_DYE
+      buy: 20
+      sell: 0.18
+    17:
+      material: AZURE_BLUET
+      buy: 20
+      sell: -1
+    18:
+      material: BLUE_ORCHID
+      buy: 20
+      sell: -1
+    19:
+      material: CORNFLOWER
+      buy: 20
+      sell: -1
+    20:
+      material: RED_TULIP
+      buy: 20
+      sell: -1
+    21:
+      material: SUNFLOWER
+      buy: 20
+      sell: -1
+    22:
+      material: INK_SAC
+      buy: 30
+      sell: -1
