--- a/config.yml
+++ b/config.yml
@@ -172,8 +172,10 @@ Shops:
       material: TNT
       buy: 40
       sell: 8
-  Dyes:
-
+      
+  ####################
+  
+  Colorants:
     1:
       material: BLACK_DYE
       buy: 20
@@ -261,4 +263,463 @@ Shops:
     22:
       material: INK_SAC
       buy: 30
+      sell: -1
+      
+   ####################
+   
+  Agriculture:
+
+    1:
+      material: BAMBOO
+      buy: 45
+      sell: 0.5
+    4:
+      material: BEETROOT_SEEDS
+      buy: 55
+      sell: 3
+    5:
+      material: BROWN_MUSHROOM
+      buy: 45
+      sell: 1.2
+    6:
+      material: CACTUS
+      buy: 60
+      sell: 3.6
+    7:
+      material: CARROT
+      buy: 60
+      sell: 2
+    8:
+      material: CHORUS_FLOWER
+      buy: 120
+      sell: 2
+    9:
+      material: CHORUS_FRUIT
+      buy: 75
+      sell: 1.2
+    10:
+      material: COCOA_BEANS
+      buy: 95
+      sell: 3
+    12:
+      material: EGG
+      buy: 45
+      sell: 6
+    13:
+      material: KELP
+      buy: 40
+      sell: 0.8
+    15:
+      material: MELON
+      buy: 180
+      sell: 2.3
+    17:
+      material: MELON_SLICE
+      buy: 45
+      sell: 0.5
+    18:
+      material: NETHER_WART
+      buy: 120
+      sell: 2.8
+    19:
+      material: POTATO
+      buy: 60
+      sell: 2.5
+    20:
+      material: PUMPKIN
+      buy: 80
+      sell: 2.3
+    22:
+      material: RED_MUSHROOM
+      buy: 80
+      sell: 1.2
+    23:
+      material: SUGAR_CANE
+      buy: 90
+      sell: 5
+    25:
+      material: WHEAT
+      buy: 80
+      sell: 3
+    26:
+      material: WHEAT_SEEDS
+      buy: 100
+      sell: 1.3
+      
+   ####################
+   
+  Nourritures:
+
+    1:
+      material: APPLE
+      buy: 10
+      sell: -1
+    2:
+      material: BREAD
+      buy: 15.75
+      sell: -1
+    3:
+      material: CAKE
+      buy: 240.68
+      sell: -1
+    4:
+      material: COOKED_SALMON
+      buy: 6.3
+      sell: -1
+    5:
+      material: COOKIE
+      buy: 2.1
+      sell: -1
+    7:
+      material: HONEY_BOTTLE
+      buy: 7.94
+      sell: -1
+    8:
+      material: BAKED_POTATO
+      buy: 5.25
+      sell: -1
+    9:
+      material: COOKED_BEEF
+      buy: 6.3
+      sell: -1
+    10:
+      material: COOKED_CHICKEN
+      buy: 6.3
+      sell: -1
+    11:
+      material: COOKED_MUTTON
+      buy: 6.3
+      sell: -1
+    12:
+      material: COOKED_PORKCHOP
+      buy: 6.3
+      sell: -1
+    13:
+      material: COOKED_RABBIT
+      buy: 6.3
+      sell: -1
+    14:
+      material: BEEF
+      buy: 6
+      sell: 1.5
+    15:
+      material: CHICKEN
+      buy: 6
+      sell: 1.5
+    16:
+      material: MUTTON
+      buy: 6
+      sell: 1.5
+    17:
+      material: PORKCHOP
+      buy: 6
+      sell: 1.5
+    18:
+      material: RABBIT
+      buy: 6
+      sell: 1.5
+    19:
+      material: BEETROOT_SOUP
+      buy: 38.72
+      sell: -1
+      
+  #######################
+  Drops:
+
+    1:
+      material: ARROW
+      buy: 40
+      sell: 2
+    2:
+      material: BLAZE_POWDER
+      buy: 18
+      sell: 2.6
+    3:
+      material: BLAZE_ROD
+      buy: 55
+      sell: 6
+    4:
+      material: BONE
+      buy: 60
+      sell: 6
+    5:
+      material: FEATHER
+      buy: 65
+      sell: 5
+    6:
+      material: FERMENTED_SPIDER_EYE
+      buy: 85
+      sell: 8
+    7:
+      material: GHAST_TEAR
+      buy: 65
+      sell: 10
+    8:
+      material: GUNPOWDER
+      buy: 50
+      sell: 8
+    9:
+      material: MAGMA_CREAM
+      buy: 40
+      sell: 7
+    10:
+      material: NAUTILUS_SHELL
+      buy: 180
+      sell: 45
+    11:
+      material: PHANTOM_MEMBRANE
+      buy: 140
+      sell: 30
+    12:
+      material: RABBIT_FOOT
+      buy: 250
+      sell: 55
+    13:
+      material: RABBIT_HIDE
+      buy: 65
+      sell: 9
+    14:
+      material: ROTTEN_FLESH
+      buy: 45
+      sell: 6
+    15:
+      material: SPIDER_EYE
+      buy: 65
+      sell: 5
+    16:
+      material: STRING
+      buy: 50
+      sell: 2.5
+    17:
+      material: SLIME_BALL
+      buy: 70
+      sell: 8
+    18:
+      material: LEATHER
+      buy: 60
+      sell: 10
+      
+  ###################
+  Minerais:
+  
+    3:
+      material: ANCIENT_DEBRIS
+      buy: 529
+      sell: 132.25
+    4:
+      material: COAL
+      buy: 21
+      sell: 5.25
+    5:
+      material: COAL_BLOCK
+      buy: 198.45
+      sell: 49.62
+    8:
+      material: DIAMOND
+      buy: 210
+      sell: 52.5
+    9:
+      material: DIAMOND_BLOCK
+      buy: 1984.5
+      sell: 496.13
+    10:
+      material: EMERALD
+      buy: 142.23
+      sell: 35.56
+    11:
+      material: EMERALD_BLOCK
+      buy: 1344.01
+      sell: 336.01
+    12:
+      material: GOLD_BLOCK
+      buy: 297.68
+      sell: 74.42
+    13:
+      material: GOLD_INGOT
+      buy: 31.5
+      sell: 7.88
+    14:
+      material: IRON_BLOCK
+      buy: 198.45
+      sell: 49.62
+    15:
+      material: IRON_INGOT
+      buy: 21
+      sell: 5.25
+    16:
+      material: LAPIS_BLOCK
+      buy: 136.44
+      sell: 34.11
+    17:
+      material: LAPIS_LAZULI
+      buy: 14.44
+      sell: 3.61
+    18:
+      material: NETHERITE_BLOCK
+      buy: 23296.05
+      sell: 5824.02
+    19:
+      material: NETHERITE_INGOT
+      buy: 2465.19
+      sell: 616.3
+    20:
+      material: QUARTZ
+      buy: 33.08
+      sell: 8.27
+    21:
+      material: QUARTZ_BLOCK
+      buy: 138.92
+      sell: 34.73
+    22:
+      material: REDSTONE
+      buy: 5.25
+      sell: 1.32
+    23:
+      material: REDSTONE_BLOCK
+      buy: 49.62
+      sell: 12.41
+      
+    #################################
+  Autres:
+
+    3:
+      material: BELL
+      buy: 1000
+      sell: -1
+    7:
+      material: ELYTRA
+      buy: 5000000
+      sell: -1
+    8:
+      material: ENDER_CHEST
+      buy: 273.12
+      sell: -1
+    10:
+      material: EXPERIENCE_BOTTLE
+      buy: 300
+      sell: -1
+    13:
+      material: HONEYCOMB
+      buy: 60
+      sell: 15
+    14:
+      material: LAVA_BUCKET
+      buy: 300
+      sell: -1
+    15:
+      material: LEAD
+      buy: 80
+      sell: -1
+    17:
+      material: LODESTONE
+      buy: 1000
+      sell: -1
+    18:
+      material: MAP
+      buy: 120
+      sell: -1
+    20:
+      material: NAME_TAG
+      buy: 1500
+      sell: -1
+    25:
+      material: SADDLE
+      buy: 60
+      sell: -1
+    28:
+      material: SHULKER_SHELL
+      buy: 2500
+      sell: -1
+    32:
+      material: SPONGE
+      buy: 525
+      sell: -1
+    34:
+      material: TOTEM_OF_UNDYING
+      buy: 50000
+      sell: -1
+    35:
+      material: TRIDENT
+      buy: 3500
+      sell: -1
+    39:
+      material: WATER_BUCKET
+      buy: 100
+      sell: -1
+    40:
+      material: WRITABLE_BOOK
+      buy: 60
+      sell: -1
+    49:
+      material: BEACON
+      buy: 120000
+      sell: -1
+    50:
+      material: END_ROD
+      buy: 60
+      sell: -1
+    51:
+      material: LANTERN
+      buy: 45
+      sell: -1
+    52:
+      material: SOUL_LANTERN
+      buy: 45
+      sell: -1
+    53:
+      material: CAMPFIRE
+      buy: 35
+      sell: -1
+    54:
+      material: SOUL_CAMPFIRE
+      buy: 35
+      sell: -1
+      
+   ###########################"  
+   
+  Redstone:
+
+    2:
+      material: DAYLIGHT_DETECTOR
+      buy: 125
+      sell: -1
+    3:
+      material: DISPENSER
+      buy: 55
+      sell: -1
+    4:
+      material: DROPPER
+      buy: 45
+      sell: -1
+    5:
+      material: HOPPER
+      buy: 120
+      sell: -1
+    7:
+      material: JUKEBOX
+      buy: 229
+      sell: -1
+    10:
+      material: NOTE_BLOCK
+      buy: 40
+      sell: -1
+    11:
+      material: OBSERVER
+      buy: 80
+      sell: -1
+    12:
+      material: REDSTONE_LAMP
+      buy: 35
+      sell: -1
+    14:
+      material: RESPAWN_ANCHOR
+      buy: 500
+      sell: -1
+    15:
+      material: TARGET
+      buy: 85
+      sell: -1
+    21:
+      material: PISTON
+      buy: 180
       sell: -1
