--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
     <id>codemc-repo</id>
     <url>https://repo.codemc.io/repository/maven-public/</url>
 </repository>
+<repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -62,6 +66,12 @@
     <version>2.4.9</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+        <groupId>com.github.MilkBowl</groupId>
+        <artifactId>VaultAPI</artifactId>
+        <version>1.7</version>
+        <scope>provided</scope>
+    </dependency>
     </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
