--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 bossbar:
-  #Nombre de bossbar, si vous ne modifer pas ce chiffre alors que vous avez ajouté/enlevé un display, DE GROS BUGS PEUVENT SURVENIR, je n"en serais pas responsable
+  #Nombre de bossbar, si vous ne modifer pas ce chiffre alors que vous avez ajout\u00e9/enlev\u00e9 un display, DE GROS BUGS PEUVENT SURVENIR, je n"en serais pas responsable
   number: 5
   display:
     1: "\u00a76\u00a7lVery\u00a7f\u00a7lMc \u00A7c\u00A7>>> \u00A7fBon jeu sur nos serveurs !"
@@ -11,8 +11,8 @@ bossbar:
   #80 = 4 secondes
   delay: 380
   intraspeed: 2
-  activated: "BossBar activée, les modifications peuvent prendre un moment !"
-  disabled: "BossBar désactivée, les modifications peuvent prendre un moment !"
+  activated: "BossBar activ\u00e9e, les modifications peuvent prendre un moment !"
+  disabled: "BossBar d\u00e9sactiv\u00e9e, les modifications peuvent prendre un moment !"
   invalidargs: "Arguments invalides"
 Shops:
   Blocs:
@@ -730,84 +730,84 @@ Shops:
     2:
       material: SPAWNER
       spawnertype: BLAZE
-      name: "§fGénérateur à §eBlaze"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeBlaze"
       buy: 125000
       sell: -1
     3:
       material: SPAWNER
       spawnertype: CHICKEN
-      name: "§fGénérateur à §ePoulet"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSePoulet"
       buy: 15000
       sell: -1
     4:
       material: SPAWNER
       spawnertype: COW
-      name: "§fGénérateur à §eVache"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeVache"
       buy: 100000
       sell: -1
     5:
       material: SPAWNER
       spawnertype: CREEPER
-      name: "§fGénérateur à §eCreeper"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeCreeper"
       buy: 150000
       sell: -1
     6:
       material: SPAWNER
       spawnertype: ENDERMAN
-      name: "§fGénérateur à §eEnderman"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeEnderman"
       buy: 175000
       sell: -1
     11:
       material: SPAWNER
       spawnertype: IRON_GOLEM
-      name: "§fGénérateur à §eIrongolem"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeIrongolem"
       buy: 1000000
       sell: -1
     17:
       material: SPAWNER
       spawnertype: RABBIT
-      name: "§fGénérateur à §eLapin"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeLapin"
       buy: 45000
       sell: -1
     18:
       material: SPAWNER
       spawnertype: SHEEP
-      name: "§fGénérateur à §eMouton"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeMouton"
       buy: 45000
       sell: -1
     20:
       material: SPAWNER
       spawnertype: SKELETON
-      name: "§fGénérateur à §eSquelette"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeSquelette"
       buy: 125000
       sell: -1
     21:
       material: SPAWNER
       spawnertype: SLIME
-      name: "§fGénérateur à §eSlime"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeSlime"
       buy: 550000
       sell: -1
     22:
       material: SPAWNER
       spawnertype: SPIDER
-      name: "§fGénérateur à §eAraignée"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeAraign\u00e9e"
       buy: 45000
       sell: -1
     23:
       material: SPAWNER
       spawnertype: SQUID
-      name: "§fGénérateur à §ePoulpe"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSePoulpe"
       buy: 100000
       sell: -1
     25:
       material: SPAWNER
       spawnertype: WITCH
-      name: "§fGénérateur à §eSorcière"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeSorcière"
       buy: 500000
       sell: -1
     27:
       material: SPAWNER
       spawnertype: ZOMBIE
-      name: "§fGénérateur à §eZombie"
+      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeZombie"
       buy: 120000
       sell: -1
