--- a/config.yml
+++ b/config.yml
@@ -730,84 +730,84 @@ Shops:
     2:
       material: SPAWNER
       spawnertype: BLAZE
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeBlaze"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eBlaze"
       buy: 80000
       sell: -1
     3:
       material: SPAWNER
       spawnertype: CHICKEN
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSePoulet"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7ePoulet"
       buy: 20000
       sell: -1
     4:
       material: SPAWNER
       spawnertype: COW
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeVache"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eVache"
       buy: 40000
       sell: -1
     5:
       material: SPAWNER
       spawnertype: CREEPER
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeCreeper"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eCreeper"
       buy: 60000
       sell: -1
     6:
       material: SPAWNER
       spawnertype: ENDERMAN
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeEnderman"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eEnderman"
       buy: 80000
       sell: -1
     11:
       material: SPAWNER
       spawnertype: IRON_GOLEM
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeIrongolem"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eIrongolem"
       buy: 1000000
       sell: -1
     17:
       material: SPAWNER
       spawnertype: RABBIT
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeLapin"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eLapin"
       buy: 25000
       sell: -1
     18:
       material: SPAWNER
       spawnertype: SHEEP
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeMouton"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eMouton"
       buy: 30000
       sell: -1
     20:
       material: SPAWNER
       spawnertype: SKELETON
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeSquelette"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eSquelette"
       buy: 40000
       sell: -1
     21:
       material: SPAWNER
       spawnertype: SLIME
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeSlime"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eSlime"
       buy: 90000
       sell: -1
     22:
       material: SPAWNER
       spawnertype: SPIDER
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeAraign\u00e9e"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eAraign\u00e9e"
       buy: 45000
       sell: -1
     23:
       material: SPAWNER
       spawnertype: SQUID
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSePoulpe"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7ePoulpe"
       buy: 100000
       sell: -1
     25:
       material: SPAWNER
       spawnertype: WITCH
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeSorci\u00e8re"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eSorci\u00e8re"
       buy: 500000
       sell: -1
     27:
       material: SPAWNER
       spawnertype: ZOMBIE
-      name: "SSSSfG\u00e9n\u00e9rateur \u00e0 SSSSeZombie"
+      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eZombie"
       buy: 35000
       sell: -1
