--- a/.settings/fr.kazejiyu.discord.rpc.integration.prefs
+++ b/.settings/fr.kazejiyu.discord.rpc.integration.prefs
@@ -1,6 +1,6 @@
 CUSTOM_APP_ID=
 CUSTOM_DISCORD_DETAILS_WORDING=Editing ${file}
-CUSTOM_DISCORD_STATE_WORDING=On ${project}
+CUSTOM_DISCORD_STATE_WORDING=On ${project} VeryMc
 PROJECT_NAME=
 RESET_ELAPSED_TIME=RESET_ELAPSED_TIME_ON_NEW_PROJECT
 SHOW_ELAPSED_TIME=true
