--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/fr/farmeurimmo/verymc/events/TchatManager.java=UTF-8
 encoding//src/fr/farmeurimmo/verymc/holos/HolosSetup.java=UTF-8
+encoding//src/fr/farmeurimmo/verymc/scoreboard/ScoreBoard.java=UTF-8
