Buff eco + fixs + code reorga

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         </repository>
         <repository>
             <id>purpur</id>
-            <url>https://repo.pl3x.net/</url>
+            <url>https://repo.purpurmc.org/snapshots</url>
         </repository>
         <repository>
             <id>iridiumdevelopment</id>
@@ -51,7 +51,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>net.pl3x.purpur</groupId>
+            <groupId>org.purpurmc.purpur</groupId>
             <artifactId>purpur-api</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
@@ -82,7 +82,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>15</release>
+                    <release>16</release>
                 </configuration>
             </plugin>
         </plugins>
