--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -74,12 +74,12 @@ Shops:
       sell: 0.80
     15:
       material: DIRT
-      buy: 60
+      buy: 40
       sell: 1
     16:
       material: GRASS_BLOCK
       buy: 120
-      sell: 2
+      sell: 55
     17:
       material: GRAVEL
       buy: 40
@@ -87,7 +87,7 @@ Shops:
     18:
       material: MYCELIUM
       buy: 120
-      sell: 10
+      sell: 56
     19:
       material: PODZOL
       buy: 120
@@ -147,31 +147,31 @@ Shops:
     34:
       material: ACACIA_LOG
       buy: 40
-      sell: 7
+      sell: 9
     35:
       material: BIRCH_LOG
       buy: 40
-      sell: 8
+      sell: 11
     36:
       material: DARK_OAK_LOG
       buy: 40
-      sell: 6
+      sell: 8
     37:
       material: JUNGLE_LOG
       buy: 40
-      sell: 5
+      sell: 8
     38:
       material: OAK_LOG
       buy: 40
-      sell: 8
+      sell: 11
     39:
       material: SPRUCE_LOG
       buy: 40
-      sell: 5
+      sell: 8
     40:
       material: TNT
       buy: 40
-      sell: 4
+      sell: 6
 
   ####################
 
@@ -284,7 +284,7 @@ Shops:
     6:
       material: CACTUS
       buy: 32
-      sell: 3.6
+      sell: 3.58
     7:
       material: CARROT
       buy: 40
@@ -340,7 +340,7 @@ Shops:
     25:
       material: WHEAT
       buy: 60
-      sell: 5.1
+      sell: 5.7
     26:
       material: WHEAT_SEEDS
       buy: 20
@@ -369,6 +369,10 @@ Shops:
       material: DARK_OAK_SAPLING
       buy: 20
       sell: 5
+    33:
+      material: HAY_BLOCK
+      buy: 60
+      sell: 56
 
     ####################
 
@@ -514,6 +518,10 @@ Shops:
       material: LEATHER
       buy: 60
       sell: 8
+    19:
+      material: ENDER_PEARL
+      buy: 60
+      sell: 13
 
   ###################
   Minerais:
@@ -521,47 +529,51 @@ Shops:
     4:
       material: COAL
       buy: 15
-      sell: 4
+      sell: 6
     17:
       material: LAPIS_LAZULI
       buy: 14
-      sell: 5
+      sell: 7
     22:
       material: REDSTONE
       buy: 10
-      sell: 6
+      sell: 8
     15:
       material: IRON_INGOT
       buy: 180
-      sell: 6
+      sell: 9
     13:
       material: GOLD_INGOT
       buy: 230
-      sell: 8
+      sell: 22
     8:
       material: DIAMOND
       buy: 620
-      sell: 25
+      sell: 20
     10:
       material: EMERALD
-      buy: 750
-      sell: 75
+      buy: 400
+      sell: 40
     19:
       material: NETHERITE_INGOT
-      buy: 2500
-      sell: 650
+      buy: 500
+      sell: 250
     33:
       material: ANCIENT_DEBRIS
       buy: 500
-      sell: 250
+      sell: 50
     20:
       material: QUARTZ
-      buy: 15
+      buy: 25
       sell: 6
 
     #################################
   Autres:
 
+    1:
+      material: WITHER_SKELETON_SKULL
+      buy: 25000
+      sell: -1
     3:
       material: BELL
       buy: 1000
@@ -731,13 +743,13 @@ Shops:
       material: SPAWNER
       spawnertype: ENDERMAN
       name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eEnderman"
-      buy: 80000
+      buy: 60000
       sell: -1
     11:
       material: SPAWNER
       spawnertype: IRON_GOLEM
       name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eIrongolem"
-      buy: 1000000
+      buy: 800000
       sell: -1
     17:
       material: SPAWNER
@@ -757,29 +769,17 @@ Shops:
       name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eSquelette"
       buy: 40000
       sell: -1
-    21:
-      material: SPAWNER
-      spawnertype: SLIME
-      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eSlime"
-      buy: 90000
-      sell: -1
     22:
       material: SPAWNER
       spawnertype: SPIDER
       name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eAraign\u00e9e"
       buy: 45000
       sell: -1
-    23:
-      material: SPAWNER
-      spawnertype: SQUID
-      name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7ePoulpe"
-      buy: 100000
-      sell: -1
     25:
       material: SPAWNER
       spawnertype: WITCH
       name: "\u00a7fG\u00e9n\u00e9rateur \u00e0 \u00a7eSorci\u00e8re"
-      buy: 500000
+      buy: 100000
       sell: -1
     27:
       material: SPAWNER
