--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: Farmeurimmo
 authors:
   - Farmeurimmo
 main: main.java.fr.verymc.Main
-depend: [ Citizens, IridiumSkyblock, HolographicDisplays, Vault ]
+depend: [ Citizens, HolographicDisplays, Vault ]
 api-version: 1.16
 commands:
   spawn:
@@ -82,3 +82,4 @@ commands:
     permission: admin.manage
   minions:
     permission: minions.manage
+  is:
