--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: Farmeurimmo
 authors:
   - Farmeurimmo
 main: main.java.fr.verymc.Main
-depend: [ Citizens, HolographicDisplays, Vault ]
+depend: [ Citizens, HolographicDisplays ]
 api-version: 1.16
 commands:
   spawn:
