--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,7 +23,11 @@ Shops:
     2:
       material: PACKED_ICE
       buy: 150
-      sell: 6
+      sell: 17
+    41:
+      material: ICE
+      buy: 80
+      sell: 10
     3:
       material: SOUL_SAND
       buy: 40
@@ -260,10 +264,6 @@ Shops:
       material: SUNFLOWER
       buy: 20
       sell: -1
-    22:
-      material: INK_SAC
-      buy: 30
-      sell: -1
 
     ####################
 
@@ -273,78 +273,70 @@ Shops:
       material: BAMBOO
       buy: 45
       sell: 2.5
-    4:
-      material: BEETROOT_SEEDS
-      buy: 45
-      sell: 5.8
     5:
       material: BROWN_MUSHROOM
       buy: 36
-      sell: 9
+      sell: 14
     6:
       material: CACTUS
       buy: 32
-      sell: 3.58
+      sell: 2.5
     7:
       material: CARROT
       buy: 40
-      sell: 5.8
-    8:
-      material: CHORUS_FLOWER
-      buy: 88
-      sell: 10
-    9:
-      material: CHORUS_FRUIT
-      buy: 36
-      sell: 6
+      sell: 4
     10:
       material: COCOA_BEANS
       buy: 48
-      sell: 7.2
+      sell: 4.1
     12:
       material: EGG
       buy: 35
-      sell: 12
+      sell: 4.2
     13:
       material: KELP
       buy: 25
-      sell: 3
+      sell: 2.5
+    14:
+      material: DRIED_KELP
+      buy: 25
+      sell: 3.7
     15:
       material: MELON
       buy: 59
-      sell: 5.2
+      sell: 16
     17:
       material: MELON_SLICE
       buy: 15
-      sell: 1.8
+      sell: 1.6
     18:
       material: NETHER_WART
       buy: 60
-      sell: 5.7
+      sell: 4
     19:
       material: POTATO
       buy: 40
-      sell: 5.8
+      sell: 4
     20:
       material: PUMPKIN
       buy: 60
-      sell: 6.3
+      sell: 6.4
     22:
       material: RED_MUSHROOM
       buy: 60
-      sell: 9
+      sell: 14
     23:
       material: SUGAR_CANE
       buy: 50
-      sell: 5.6
+      sell: 3.6
     25:
       material: WHEAT
       buy: 60
-      sell: 5.7
+      sell: 10
     26:
       material: WHEAT_SEEDS
       buy: 20
-      sell: 1.4
+      sell: -1
     27:
       material: OAK_SAPLING
       buy: 20
@@ -372,7 +364,23 @@ Shops:
     33:
       material: HAY_BLOCK
       buy: 60
-      sell: 56
+      sell: 105
+    34:
+      material: BEETROOT
+      buy: 60
+      sell: 10.2
+    35:
+      material: VINE
+      buy: 40
+      sell: 18
+    36:
+      material: NETHER_WART_BLOCK
+      buy: 130
+      sell: 40
+    40:
+      material: SWEET_BERRIES
+      buy: 130
+      sell: 2.5
 
     ####################
 
@@ -381,7 +389,7 @@ Shops:
     1:
       material: APPLE
       buy: 15
-      sell: -1
+      sell: 12
     2:
       material: BREAD
       buy: 20
@@ -397,7 +405,7 @@ Shops:
     5:
       material: COOKIE
       buy: 20
-      sell: -1
+      sell: 3.8
     7:
       material: HONEY_BOTTLE
       buy: 15
@@ -409,47 +417,63 @@ Shops:
     9:
       material: COOKED_BEEF
       buy: 20
-      sell: -1
+      sell: 9
     10:
       material: COOKED_CHICKEN
       buy: 20
-      sell: -1
+      sell: 9
     11:
       material: COOKED_MUTTON
       buy: 20
-      sell: -1
+      sell: 9
     12:
       material: COOKED_PORKCHOP
       buy: 20
-      sell: -1
+      sell: 9
     13:
       material: COOKED_RABBIT
       buy: 20
-      sell: -1
+      sell: 9
     14:
       material: BEEF
       buy: 10
-      sell: 1.5
+      sell: 6
     15:
       material: CHICKEN
       buy: 10
-      sell: 1.5
+      sell: 6
     16:
       material: MUTTON
       buy: 10
-      sell: 1.5
+      sell: 6
     17:
       material: PORKCHOP
       buy: 10
-      sell: 1.5
+      sell: 6
     18:
       material: RABBIT
       buy: 10
-      sell: 1.5
+      sell: 6
     19:
-      material: BEETROOT_SOUP
-      buy: 38.72
-      sell: -1
+      material: PUMPKIN_PIE
+      buy: 20
+      sell: 18
+    20:
+      material: PUFFERFISH
+      buy: 20
+      sell: 12
+    21:
+      material: TROPICAL_FISH
+      buy: 100
+      sell: 50
+    22:
+      material: COD
+      buy: 15
+      sell: 10
+    23:
+      material: SALMON
+      buy: 15
+      sell: 10
 
   #######################
   Drops:
@@ -461,19 +485,19 @@ Shops:
     3:
       material: BLAZE_ROD
       buy: 55
-      sell: 7
+      sell: 13
     4:
       material: BONE
       buy: 60
-      sell: 6
+      sell: 7
     5:
       material: FEATHER
       buy: 65
-      sell: 7
+      sell: 8
     7:
       material: GHAST_TEAR
       buy: 65
-      sell: 10
+      sell: 20
     8:
       material: GUNPOWDER
       buy: 50
@@ -481,7 +505,7 @@ Shops:
     9:
       material: MAGMA_CREAM
       buy: 40
-      sell: 7
+      sell: 12
     10:
       material: NAUTILUS_SHELL
       buy: 180
@@ -489,7 +513,7 @@ Shops:
     11:
       material: PHANTOM_MEMBRANE
       buy: 140
-      sell: 30
+      sell: 20
     12:
       material: RABBIT_FOOT
       buy: 250
@@ -513,15 +537,19 @@ Shops:
     17:
       material: SLIME_BALL
       buy: 70
-      sell: 10
+      sell: 9
     18:
       material: LEATHER
       buy: 60
-      sell: 8
+      sell: 9
     19:
       material: ENDER_PEARL
       buy: 60
-      sell: 11
+      sell: 15
+    20:
+      material: INK_SAC
+      buy: 30
+      sell: 9
 
   ###################
   Minerais:
@@ -529,7 +557,7 @@ Shops:
     4:
       material: COAL
       buy: 15
-      sell: 6
+      sell: 8
     17:
       material: LAPIS_LAZULI
       buy: 14
@@ -541,15 +569,15 @@ Shops:
     15:
       material: IRON_INGOT
       buy: 180
-      sell: 9
+      sell: 12
     13:
       material: GOLD_INGOT
       buy: 230
-      sell: 22
+      sell: 20
     8:
       material: DIAMOND
       buy: 620
-      sell: 20
+      sell: 30
     10:
       material: EMERALD
       buy: 400
@@ -557,15 +585,19 @@ Shops:
     19:
       material: NETHERITE_INGOT
       buy: 500
-      sell: 250
+      sell: 260
     33:
       material: ANCIENT_DEBRIS
       buy: 500
-      sell: 50
+      sell: 40
     20:
       material: QUARTZ
-      buy: 25
+      buy: 8
       sell: 6
+    21:
+      material: NETHERITE_SCRAP
+      buy: 500
+      sell: 45
 
     #################################
   Autres:
