Modification (perm, gui, etc) du /trade

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -86,6 +86,10 @@ commands:
   invest:
   playerwarp:
   trade:
+    permission: trade
   tradeyes:
+    permission: trade
   tradeno:
+    permission: trade
   tradecancel:
+    permission: trade
