Velocity: Ajout des dungeon teams + enum Floor

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -94,5 +94,5 @@ commands:
     permission: trade
   tradecancel:
     permission: trade
-  dungeon:
-    permission: dungeon
+  dungeonadmin:
+    permission: dungeon.admin
