--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
             <id>dmulloy2-repo</id>
             <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
+        <repository>
+            <id>verymc</id>
+            <url>https://nexus.premsiserv.com/repository/maven-snapshots/</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -109,6 +113,11 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>fr.verymc.api</groupId>
+            <artifactId>Wrapper</artifactId>
+            <version>2.2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
