--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -184,6 +184,14 @@ Shops:
       material: CRIMSON_STEM
       buy: 40
       sell: 6
+    44:
+      material: BUDDING_AMETHYST
+      buy: 70
+      sell: 8
+    45:
+      material: AMETHYST_SHARD
+      buy: 70
+      sell: 6
 
   ####################
 
@@ -280,39 +288,39 @@ Shops:
     1:
       material: BAMBOO
       buy: 45
-      sell: 2.7
+      sell: 1.7
     5:
       material: BROWN_MUSHROOM
       buy: 36
-      sell: 14
+      sell: 12
     6:
       material: CACTUS
       buy: 32
-      sell: 2.2
+      sell: 2.1
     7:
       material: CARROT
       buy: 40
-      sell: 4
+      sell: 3.8
     10:
       material: COCOA_BEANS
       buy: 48
-      sell: 4.1
+      sell: 3.9
     12:
       material: EGG
       buy: 35
-      sell: 4.2
+      sell: 4
     13:
       material: KELP
       buy: 25
-      sell: 2.6
+      sell: 1.8
     14:
       material: DRIED_KELP
       buy: 25
-      sell: 3.9
+      sell: 2.3
     15:
       material: MELON
       buy: 59
-      sell: 7
+      sell: 6.5
     17:
       material: MELON_SLICE
       buy: 15
@@ -320,15 +328,15 @@ Shops:
     18:
       material: NETHER_WART
       buy: 60
-      sell: 4
+      sell: 3.7
     19:
       material: POTATO
       buy: 40
-      sell: 4
+      sell: 3.8
     20:
       material: PUMPKIN
       buy: 60
-      sell: 6
+      sell: 5
     22:
       material: RED_MUSHROOM
       buy: 60
@@ -380,7 +388,7 @@ Shops:
     35:
       material: VINE
       buy: 40
-      sell: 18
+      sell: 1.8
     36:
       material: NETHER_WART_BLOCK
       buy: 130
@@ -389,6 +397,14 @@ Shops:
       material: SWEET_BERRIES
       buy: 130
       sell: 2.8
+    41:
+      material: GLOW_LICHEN
+      buy: 130
+      sell: 2.1
+    42:
+      material: MOSS_BLOCK
+      buy: 110
+      sell: -1
 
     ####################
 
